--- a/Calculator.css
+++ b/Calculator.css
@@ -2,11 +2,12 @@ button{
     width: 100px;
     height: 100px;
     border-radius: 50px;
-    background-color: #820300;
+    background-color: rgb(56, 54, 54);
     color: white;
-    font-size: 3rem;
+    font-size: 4rem;
     font-weight: bold;
     cursor: pointer;
+    border: none;
 }
 body{
     margin: 0;
@@ -14,7 +15,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: wheat;
+    background-color: black;
 }
 #keys{
     display: grid;
@@ -30,29 +31,30 @@ body{
     font-size: 5rem;
     text-align: left;
     border: none;
-    background-color: #AAD9BB ;
-    color: black;
+    background-color: #313131 ;
+    color: white;
 
 }
 #calculator{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #5F8670;
+    background-color: #1d1d1d;
     border-radius: 20px;
     max-width: 600px;
     overflow: hidden;
 }
 button:hover{
-    background-color: #8a0707 ;
+    background-color: rgb(87, 87, 87) ;
+    box-shadow: 10px 10px 8px gold ;
 }
 button:active{
-    background-color: rgb(192, 54, 54);
+    background-color: gray;
 }
 .Operator-btn{
-    background-color: rgb(75, 75, 0) ;
+    background-color: rgb(0, 255, 255) ;
 }
 .Operator-btn:hover{
-        background-color: rgb(126, 126, 1);
+        background-color: rgb(117, 255, 255);
 }
 .Operator-btn:active{
-    background-color: rgb(208, 255, 1);
+    background-color: rgb(149, 255, 255);
 }
